# wikipedia_game

./: .gitignore  Dockerfile  app.py  bs.py  finder.py  main.ipynb  main.py  model.py  pyproject.toml  requirements.txt  scraper.py
static/: index_css.css  result_css.css
templates/: index.html  result.html
