[project]
name = "wikipedia-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "gensim>=4.4.0",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
